--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JDB443 MongoScraper</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <meta property="og:title" content="JDB NYT Mongoscraper" />
+  <meta property="og:description" content="New York Times app using react, mongodb, and to scrape the NYT Website to find articles. Built for web and mobile." />
+  <meta property="og:url" content="https://jdb443-mongo-nyt-scraper.herokuapp.com/" />
+  <!-- <meta property="og:image" content="?raw=true" /> -->
+  <meta name="author" content="Jonathan Behar">
+  <title>JDB443 MongoScraper</title>
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   <!-- Added link to css file -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <!-- Added link to css file -->
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     
 </head>
 
