--- a/views/favorite.handlebars
+++ b/views/favorite.handlebars
@@ -1,12 +1,12 @@
 <h2>Showing Favorite Articles</h2>
-<div class="table-responsive" id=table-container>
+<div class="table-responsive" id="table-container">
     <table class="table table-striped">
         <thead>
             <tr>
                 {{!-- <th scope="col">_id</th> --}}
                 <th scope="col">Title</th>
                 <th scope="col">Summary</th>
-                <th scope="col">Byline</th>
+                {{!-- <th scope="col">Byline</th> --}}
                 <th scope="col">Link</th>
                 <th scope="col">Article Notes</th>
                 <th scope="col">Unfavorite the Article</th>
@@ -18,7 +18,7 @@
                 {{!-- <td>{{this._id}}</td> --}}
                 <td class="maxTitle">{{this.title}}</td>
                 <td class="maxSummary">{{this.summary}}</td>
-                <td class="maxByline">{{this.byline}}</td>
+                {{!-- <td class="maxByline">{{this.byline}}</td> --}}
                 <td class="maxLink">{{this.link}}</td>
                 <td>
                     <button class="article-notes" data-id={{this._id}}>Article Notes</button>
