--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,30 +1,28 @@
 <h2>Showing All Articles</h2>
-<div class="table-responsive" id=table-container>
+<div class="table-responsive" id="table-container">
     <table class="table table-striped">
         <thead>
             <tr>
                 {{!-- <th scope="col">_id</th> --}}
                 <th scope="col">Title</th>
                 <th scope="col">Summary</th>
-                <th scope="col">Byline</th>
+                {{!-- <th scope="col">Byline</th> --}}
                 <th scope="col">Link</th>
                 <th scope="col">Article Notes</th>
                 <th scope="col">Favorite the Article</th>
             </tr>
         </thead>
         <tbody>
-            {{#each article}}
+            {{#each articles}}
             <tr>
-                {{!-- <td>{{this._id}}</td> --}}
-                <td class="maxTitle">{{this.title}}</td>
-                <td class="maxSummary">{{this.summary}}</td>
-                <td class="maxByline">{{this.byline}}</td>
-                <td class="maxLink">{{this.link}}</td>
+                <td class="maxTitle">{{headline}}</td>
+                <td class="maxSummary">{{summary}}</td>
+                <td class="maxLink">{{url}}</td>
                 <td>
-                    <button class="article-notes" data-id={{this._id}}>Article Notes</button>
+                    <button class="article-notes" >Article Notes</button>
                 </td>
                 <td>
-                    <button class="article-favorite" data-id={{this._id}}>Favorite the Article</button>
+                    <button class="article-favorite" >Favorite the Article</button>
                 </td>
             </tr>
             {{/each}}
