--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
   <meta property="og:url" content="https://jdb443-mongo-nyt-scraper.herokuapp.com/" />
   <!-- <meta property="og:image" content="?raw=true" /> -->
   <meta name="author" content="Jonathan Behar">
-  <title>JDB443 MongoScraper</title>
+  <title>JDB443 MongoScraper!</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Added link to css file -->
