--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,2 +1,2 @@
 <p id="HomeTitle">MongoScraper App</p>
-<p id="HomeTitleSub">New York Times World Edition</p>
+<p id="HomeTitleSub">New York Times Edition</p>
