--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/articles">Mongoose News Scrapper App</a>
+    <a class="navbar-brand engrvrsoldeng" href="/articles">Mongoose News Scrapper App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
           <a class="nav-link" href="/favorites">Favorites</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="scrapeLink" href="/scrape">Scrape New Articles</a>
+          <a class="nav-link engrvrsoldeng" id="scrapeLink" href="/scrape">Scrape New Articles</a>
         </li>
       </ul>
     </div>
