--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
             <tr>
                 <td class="maxTitle">{{headline}}</td>
                 <td class="maxSummary">{{summary}}</td>
-                <td class="maxLink">{{url}}</td>
+                <td class="maxLink"><a href="{{url}}">{{url}}</a></td>
                 <td>
                     <button class="article-notes">Article Notes</button>
                 </td>
